--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -113,39 +113,17 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_mobile_caption" />
 
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/dimen_dp_small"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
-
                 <androidx.appcompat.widget.AppCompatTextView
-
-                    android:id="@+id/tv_pass_caption"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/iran_sans_light"
-                    android:padding="@dimen/dimen_dp_tiny"
-                    android:text="@string/text_password"
-                    android:textSize="@dimen/dimen_sp_small"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/et_pass"
+                    android:id="@+id/tv_warning"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/box_for_edits"
-                    android:gravity="center"
-                    android:inputType="numberPassword"
-                    android:padding="@dimen/dimen_dp_small"
-                    android:textSize="@dimen/dimen_sp_medium"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_pass_caption" />
+                    android:textColor="@color/colorBlackStep_2"
+                    android:fontFamily="@font/iran_sans_medium"
+                    android:textSize="@dimen/text_size_10_sp"
+                    android:text="@string/text_repeat_activation_code"
+                    app:layout_constraintRight_toRightOf="@+id/et_mobile"
+                    app:layout_constraintTop_toBottomOf="@+id/et_mobile"/>
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -158,28 +136,26 @@
                 app:layout_constraintRight_toRightOf="parent">
 
                 <androidx.appcompat.widget.AppCompatTextView
-
-                    android:id="@+id/tv_pass_caption_confirm"
+                    android:id="@+id/tv_address_caption"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/iran_sans_light"
                     android:padding="@dimen/dimen_dp_tiny"
-                    android:text="@string/text_confirm_password"
+                    android:text="@string/text_address"
                     android:textSize="@dimen/dimen_sp_small"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/et_confirm_pass"
+                    android:id="@+id/et_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/box_for_edits"
-                    android:gravity="center"
-                    android:inputType="numberPassword"
+                    android:gravity="start"
                     android:padding="@dimen/dimen_dp_small"
                     android:textSize="@dimen/dimen_sp_medium"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_pass_caption_confirm" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_address_caption" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -190,18 +166,18 @@
 
 
     <androidx.appcompat.widget.AppCompatButton
-    android:id="@+id/btn_register"
-    style="?android:attr/borderlessButtonStyle"
-    android:layout_width="@dimen/dimen_dp_zero"
-    android:layout_height="wrap_content"
+        android:id="@+id/btn_register"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="@dimen/dimen_dp_zero"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/dimen_dp_small"
-    android:background="@drawable/button_style_green"
-    android:fontFamily="@font/iran_sans_bold"
-    android:text="@string/text_register"
-    android:textColor="@color/colorWhite"
-    android:textSize="@dimen/dimen_sp_small"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"/>
+        android:background="@drawable/button_style_green"
+        android:fontFamily="@font/iran_sans_bold"
+        android:text="@string/text_save_edit_profile"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/dimen_sp_small"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
