--- a/app/src/main/res/drawable/ic_key.xml
+++ b/app/src/main/res/drawable/ic_key.xml
@@ -4,13 +4,7 @@
     android:width="24dp"
     android:height="24dp">
     <path
-        android:pathData="M11 4H4a2 2 0 0 0 -2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2 -2v-7"
-        android:strokeColor="#646464"
-        android:strokeWidth="2"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
-    <path
-        android:pathData="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1 -4 9.5 -9.5z"
+        android:pathData="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1 -7.778 7.778 5.5 5.5 0 0 1 7.777 -7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3 -3m-3.5 3.5L19 4"
         android:strokeColor="#646464"
         android:strokeWidth="2"
         android:strokeLineCap="round"
