--- a/app/src/main/res/drawable/ic_more.xml
+++ b/app/src/main/res/drawable/ic_more.xml
@@ -4,14 +4,20 @@
     android:width="24dp"
     android:height="24dp">
     <path
-        android:pathData="M11 4H4a2 2 0 0 0 -2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2 -2v-7"
-        android:strokeColor="#646464"
+        android:pathData="M13 12A1 1 0 0 1 11 12A1 1 0 0 1 13 12Z"
+        android:strokeColor="#ffffff"
         android:strokeWidth="2"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
     <path
-        android:pathData="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1 -4 9.5 -9.5z"
-        android:strokeColor="#646464"
+        android:pathData="M13 5A1 1 0 0 1 11 5A1 1 0 0 1 13 5Z"
+        android:strokeColor="#ffffff"
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+    <path
+        android:pathData="M13 19A1 1 0 0 1 11 19A1 1 0 0 1 13 19Z"
+        android:strokeColor="#ffffff"
         android:strokeWidth="2"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
