--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -44,6 +44,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_edit_profile"
                     android:layout_width="wrap_content"
@@ -57,6 +58,37 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_dp_very_large"
+                android:padding="@dimen/dimen_dp_tiny">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/image_pass"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="@dimen/dimen_dp_very_very_huge"
+                    android:src="@drawable/ic_key"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_edit_pass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_dp_medium"
+                    android:fontFamily="@font/iran_sans_medium"
+                    android:text="تغییر کلمه عبور"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/dimen_sp_small"
+                    app:layout_constraintRight_toLeftOf="@id/image_pass"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -81,8 +113,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_dp_medium"
                     android:fontFamily="@font/iran_sans_medium"
-                    android:textColor="@color/colorBlack"
                     android:text="درباره ما"
+                    android:textColor="@color/colorBlack"
                     android:textSize="@dimen/dimen_sp_small"
                     app:layout_constraintRight_toLeftOf="@id/image_about_us"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -112,8 +144,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_dp_medium"
                     android:fontFamily="@font/iran_sans_medium"
-                    android:textColor="@color/colorBlack"
                     android:text="تماس با ما"
+                    android:textColor="@color/colorBlack"
                     android:textSize="@dimen/dimen_sp_small"
                     app:layout_constraintRight_toLeftOf="@id/image_contact_us"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -132,7 +164,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginEnd="@dimen/dimen_dp_very_very_huge"
-                    android:src="@drawable/ic_call_us"
+                    android:src="@drawable/ic_suggest"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -143,8 +175,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_dp_medium"
                     android:fontFamily="@font/iran_sans_medium"
-                    android:textColor="@color/colorBlack"
                     android:text="ثبت انتقاد، پیشنهاد، نظر"
+                    android:textColor="@color/colorBlack"
                     android:textSize="@dimen/dimen_sp_small"
                     app:layout_constraintRight_toLeftOf="@id/image_suggest"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -174,8 +206,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_dp_medium"
                     android:fontFamily="@font/iran_sans_medium"
-                    android:textColor="@color/colorBlack"
                     android:text="ما را در شبکه های اجتماعی دنبال کنید"
+                    android:textColor="@color/colorBlack"
                     android:textSize="@dimen/dimen_sp_small"
                     app:layout_constraintRight_toLeftOf="@id/image_follow_us"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -194,7 +226,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginEnd="@dimen/dimen_dp_very_very_huge"
-                    android:src="@drawable/ic_follow_us"
+                    android:src="@drawable/ic_product_team"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -205,14 +237,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_dp_medium"
                     android:fontFamily="@font/iran_sans_medium"
-                    android:textColor="@color/colorBlack"
                     android:text="تیم تولید"
+                    android:textColor="@color/colorBlack"
                     android:textSize="@dimen/dimen_sp_small"
                     app:layout_constraintRight_toLeftOf="@id/image_about_team"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
