--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -26,17 +26,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/iran_sans_medium"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/text_size_20_sp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/image_call_us"
                     android:layout_width="20dp"
@@ -51,14 +40,13 @@
                     android:id="@+id/tv_about_us"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/size_20_dp"
+                    android:layout_marginTop="@dimen/size_10_dp"
                     android:fontFamily="@font/iran_sans_medium"
-                    android:text="@string/app_name"
                     android:textColor="@color/colorBlack"
                     android:textSize="@dimen/text_size_12_sp"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="@id/tv_title"
-                    app:layout_constraintTop_toBottomOf="@id/tv_title" />
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/image_call_us" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
