--- a/app/src/main/res/layout/template_order_list.xml
+++ b/app/src/main/res/layout/template_order_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,18 +12,20 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_order_status"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:src="@drawable/ic_arrow_right"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="@dimen/size_4_dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_amade" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_tracking_code_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_dp_tiny"
-        android:layout_marginEnd="@dimen/dimen_dp_tiny"
+        android:layout_marginEnd="@dimen/size_8_dp"
         android:fontFamily="@font/iran_sans"
         android:text="کد پیگیری"
         android:textColor="@color/colorBlackStep_4"
@@ -49,7 +50,7 @@
         android:id="@+id/tv_my_order_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/dimen_dp_tiny"
+        android:layout_marginEnd="@dimen/size_8_dp"
         android:fontFamily="@font/iran_sans"
         android:text="18 ساعت پیش"
         android:textColor="@color/colorBlackStep_1"
