--- a/app/src/main/res/drawable/text_green_border_style.xml
+++ b/app/src/main/res/drawable/text_green_border_style.xml
@@ -11,7 +11,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="0.5dp" android:color="@color/colorWhite" />
+            <stroke android:width="0.5dp" android:color="@color/color_green" />
             <solid android:color="@color/colorWhite" />
             <corners android:radius="2dp" />
         </shape>
