--- a/app/src/main/res/layout/dialog_product_team.xml
+++ b/app/src/main/res/layout/dialog_product_team.xml
@@ -1,166 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-    xmlns:app = "http://schemas.android.com/apk/res-auto"
-    xmlns:tools = "http://schemas.android.com/tools"
-    android:layout_width = "match_parent"
-    android:layout_height = "wrap_content"
-    android:background = "@drawable/dialog_bg"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialog_bg"
     android:layoutDirection="rtl"
-    tools:ignore = "UseCompoundDrawables">
+    tools:ignore="UseCompoundDrawables">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/header_text"
-        android:layout_width = "0dp"
-        android:layout_height = "wrap_content"
+        android:id="@+id/header_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_10_dp"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
+        android:layout_marginBottom="@dimen/dimen_dp_small"
         android:fontFamily="@font/iran_sans"
-        android:gravity = "center"
-        android:text = "طراحی و توسعه اپلیکیشن توسط گروه نرم افزاری سُرنا سافت"
-        android:textColor = "@color/colorBlackStep_5"
-        android:textSize = "@dimen/dimen_sp_medium"
-        android:textStyle = "bold"
-        app:layout_constraintLeft_toLeftOf = "parent"
-        app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toTopOf = "parent"/>
-
+        android:gravity="center"
+        android:text="طراحی و توسعه اپلیکیشن توسط گروه نرم افزاری"
+        android:textColor="@color/colorBlackStep_5"
+        android:textSize="@dimen/dimen_sp_medium"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/title_text"
-        android:layout_width = "0dp"
-        android:layout_height = "wrap_content"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
-        android:fontFamily="@font/iran_sans_medium"
+        android:id="@+id/company_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_10_dp"
-        android:gravity = "center"
-        android:text = "« ما لبخند رضایت می فروشیم »"
-        android:textColor = "@color/color_green"
-        android:textSize = "@dimen/dimen_sp_large"
-        app:layout_constraintLeft_toLeftOf = "parent"
-        app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toBottomOf = "@id/header_text"/>
+        android:layout_marginBottom="@dimen/dimen_dp_small"
+        android:fontFamily="@font/iran_sans"
+        android:gravity="center"
+        android:text="سُرنا سافت"
+        android:textColor="@color/colorBlackStep_5"
+        android:textSize="@dimen/dimen_sp_medium"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_text" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/title_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_10_dp"
+        android:layout_marginBottom="@dimen/dimen_dp_small"
+        android:fontFamily="@font/iran_sans_medium"
+        android:gravity="center"
+        android:text="« ما لبخند رضایت می فروشیم »"
+        android:textColor="@color/color_green"
+        android:textSize="@dimen/dimen_sp_large"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/company_text" />
 
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id = "@+id/image_team"
-        android:layout_width = "300dp"
-        android:layout_height = "150dp"
-        app:srcCompat="@drawable/ic_team"
+        android:id="@+id/image_team"
+        android:layout_width="300dp"
+        android:layout_height="150dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text"/>
+        app:layout_constraintTop_toBottomOf="@+id/title_text"
+        app:srcCompat="@drawable/ic_team" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/tv_product_title"
-        android:layout_width = "0dp"
-        android:layout_height = "wrap_content"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
-        android:fontFamily="@font/iran_sans_medium"
+        android:id="@+id/tv_product_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_10_dp"
-        android:gravity = "center"
-        android:text = "..::.. توسعـه دهندگان ..::.."
-        android:textColor = "@color/colorBlackStep_5"
-        android:textSize = "@dimen/dimen_sp_small"
-        app:layout_constraintLeft_toLeftOf = "parent"
-        app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toBottomOf = "@id/image_team"/>
+        android:layout_marginBottom="@dimen/dimen_dp_small"
+        android:fontFamily="@font/iran_sans_medium"
+        android:gravity="center"
+        android:text="..::.. توسعـه دهندگان ..::.."
+        android:textColor="@color/colorBlackStep_5"
+        android:textSize="@dimen/dimen_sp_small"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_team" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/tv_product_member_one"
-        android:layout_width = "0dp"
-        android:layout_height = "wrap_content"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
-        android:fontFamily="@font/iran_sans_medium"
+        android:id="@+id/tv_product_member_one"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_10_dp"
-        android:gravity = "center"
-        android:text = "@string/text_product_member_one"
-        android:textColor = "@color/colorBlackStep_5"
-        android:textSize = "@dimen/text_size_10_sp"
-        app:layout_constraintLeft_toLeftOf = "parent"
-        app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toBottomOf = "@id/tv_product_title"/>
+        android:layout_marginBottom="@dimen/dimen_dp_small"
+        android:fontFamily="@font/iran_sans_medium"
+        android:gravity="center"
+        android:text="@string/text_product_member_one"
+        android:textColor="@color/colorBlackStep_5"
+        android:textSize="@dimen/text_size_10_sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_product_title" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/tv_product_member_two"
-        android:layout_width = "0dp"
-        android:layout_height = "wrap_content"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
-        android:fontFamily="@font/iran_sans_medium"
+        android:id="@+id/tv_product_member_two"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size_4_dp"
-        android:gravity = "center"
-        android:text = "@string/text_product_member_two"
-        android:textColor = "@color/colorBlackStep_5"
-        android:textSize = "@dimen/text_size_10_sp"
-        app:layout_constraintLeft_toLeftOf = "parent"
-        app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toBottomOf = "@id/tv_product_member_one"/>
-
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/tv_product_desc"
-        android:layout_width = "0dp"
-        android:layout_height = "wrap_content"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
+        android:layout_marginBottom="@dimen/dimen_dp_small"
         android:fontFamily="@font/iran_sans_medium"
-        android:layout_marginTop="@dimen/size_10_dp"
-        android:gravity = "start"
-        android:text = "گروه نرم افزاري سُرنا سافت با بهره گيري از کارشناسان، مشاوران، برنامه نويسان و طراحان مجرب و با استفاده از جديدترين تکنولوژي هاي روز دنيا طراحی و توسعه وب سایت و اپلیکیشن های موبایل را انجام می دهد."
-        android:textColor = "@color/colorBlackStep_5"
-        android:textSize = "@dimen/text_size_10_sp"
-        app:layout_constraintLeft_toLeftOf = "parent"
-        app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toBottomOf = "@id/tv_product_member_two"/>
+        android:gravity="center"
+        android:text="@string/text_product_member_two"
+        android:textColor="@color/colorBlackStep_5"
+        android:textSize="@dimen/text_size_10_sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_product_member_one" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/tv_product_message"
-        android:layout_width = "0dp"
-        android:layout_height = "wrap_content"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
+        android:id="@+id/tv_product_desc"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_10_dp"
+        android:layout_marginBottom="@dimen/dimen_dp_small"
         android:fontFamily="@font/iran_sans_medium"
-        android:layout_marginTop="@dimen/size_10_dp"
-        android:gravity = "center"
-        android:text ="فرقی نمی کند بازار هدف شما کجاست"
-        android:textColor = "@color/color_green"
-        android:textSize = "@dimen/text_size_14_sp"
-        app:layout_constraintLeft_toLeftOf = "parent"
-        app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toBottomOf = "@id/tv_product_desc"/>
-
+        android:gravity="start"
+        android:text="گروه نرم افزاري سُرنا سافت با بهره گيري از کارشناسان، مشاوران، برنامه نويسان و طراحان مجرب و با استفاده از جديدترين تکنولوژي هاي روز دنيا طراحی و توسعه وب سایت و اپلیکیشن های موبایل را انجام می دهد."
+        android:textColor="@color/colorBlackStep_5"
+        android:textSize="@dimen/text_size_10_sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_product_member_two" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/tv_product_message_second"
-        android:layout_width = "0dp"
-        android:layout_height = "wrap_content"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
+        android:id="@+id/tv_product_message"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_10_dp"
+        android:layout_marginBottom="@dimen/dimen_dp_small"
         android:fontFamily="@font/iran_sans_medium"
-        android:layout_marginTop="@dimen/size_10_dp"
-        android:gravity = "center"
-        android:text ="با داشتن وب سایت و اپلیکیشن، همیشه و همه جا در دسترسی هستید!"
-        android:textColor = "@color/color_red"
-        android:textSize = "@dimen/text_size_16_sp"
-        app:layout_constraintLeft_toLeftOf = "parent"
-        app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toBottomOf = "@id/tv_product_message"/>
+        android:gravity="center"
+        android:text="فرقی نمی کند بازار هدف شما کجاست"
+        android:textColor="@color/color_green"
+        android:textSize="@dimen/text_size_14_sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_product_desc" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id = "@+id/button_close_dialog"
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:layout_marginTop = "@dimen/dimen_dp_small"
-        android:layout_marginBottom = "@dimen/dimen_dp_small"
-        android:fontFamily = "@font/iran_sans_light"
-        android:gravity = "center_horizontal|center_vertical"
-        android:text = "@string/dlg_title_close_dialog"
-        android:textColor = "@color/background_slider_sepration_line"
-        android:textSize = "@dimen/dimen_sp_small"
-        android:theme = "@style/DarkFlatButton"
-        app:layout_constraintLeft_toLeftOf = "@id/header_text"
-        app:layout_constraintTop_toBottomOf = "@id/tv_product_message_second"/>
+        android:id="@+id/tv_product_message_second"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_10_dp"
+        android:layout_marginBottom="@dimen/dimen_dp_small"
+        android:fontFamily="@font/iran_sans_medium"
+        android:gravity="center"
+        android:text="با داشتن وب سایت و اپلیکیشن، همیشه و همه جا در دسترسی هستید!"
+        android:textColor="@color/color_red"
+        android:textSize="@dimen/text_size_16_sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_product_message" />
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/button_close_dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_dp_small"
+        android:layout_marginBottom="@dimen/dimen_dp_small"
+        android:fontFamily="@font/iran_sans_light"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/dlg_title_close_dialog"
+        android:textColor="@color/background_slider_sepration_line"
+        android:textSize="@dimen/dimen_sp_small"
+        android:theme="@style/DarkFlatButton"
+        app:layout_constraintLeft_toLeftOf="@id/header_text"
+        app:layout_constraintTop_toBottomOf="@id/tv_product_message_second" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
